--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title> Exercise 2 </title>
+  </head>
+  <body>
+    
+    <p> style= "font-family: 'Times New Roman', font-size: 16pt;"> 
+      Hello everyone, my name is Adibah Nadhirah </p>
+    
+  </body>
+</html>
